@@ -1,4 +1,5 @@
 Development
+	Turn off forcing of streaming for flash media
 	More work on realplayer emulation
 0.5.1
 	Implement several WMP controls methods
